# 3D-FEM

./: .gitignore  README.md
C++/: CMakeLists.txt  install.sh  main.cpp
C++/src/: element.cpp  element.h  loader.cpp  loader.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  node.cpp  node.h
C++/src/utils/: logger.cpp  logger.h
C++/tests/: Data.json
Python/: 3D_Truss_Solver.py  Augmentation.py  Truss Config 3D.xlsx  Yeet.xlsx  requirements.txt
Python/src/: main  main.cpp
